<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_infoJoueur"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.paimp.projet05.InfoJoueur">

    <TextView
        android:id="@+id/result_classe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="TextView" />

    <ImageView
        android:id="@+id/img_classe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TableLayout
        android:id="@+id/tab_info_joueur"
        android:layout_width="match_parent"
        android:layout_height="299dp"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_niveau"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:text="@string/level"/>

            <TextView
                android:id="@+id/result_level"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_force2"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:text="@string/strength"/>

            <TextView
                android:id="@+id/result_force"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_pv"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:text="@string/health"/>

            <TextView
                android:id="@+id/result_sante"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_defence"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:text="@string/defence"/>

            <TextView
                android:id="@+id/result_defense"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_pm"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:text="@string/magic"/>

            <TextView
                android:id="@+id/result_magie"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_nbr_pearl"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:text="@string/pearl"/>

            <TextView
                android:id="@+id/result_nbr_perle"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_retour_infoJoueur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Retour" />

</LinearLayout>
